[package]
name = "cloudsurf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive", "env"] }
env_logger = "0.11.3"
futures = "0.3.30"
ipnetwork = "0.20.0"
log = "0.4.21"
prettytable = "0.10.0"
rand = "0.8.5"
reqwest = { version = "0.12.3", features = ["json"] }
rustls = "0.23.4"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-rustls = "0.26.0"
webpki = "0.22.4"
webpki-roots = "0.26.1"

[dev-dependencies]
serde_json = "1.0.115"
wiremock = "0.6.0"
